# pc-coherency

./: .gitignore  README.md  compute_rates.py  compute_scores.py  counting.py  custom_pipeline.py  custom_plots.py  generate_average_scores.py  generate_result_tables.py  models.py  plotting.py  pyproject.toml  simulations.py  test_simulations.py  utils.py  utils_counting.py  utils_plotting.py
results/: effect size 0.2_V_U_T.json  effect size 0.2_W_V_U_T.json  effect size 0.5_V_U_T.json  effect size 0.5_W_V_U_T.json  effect size 10_V_U_T.json  effect size 10_W_V_U_T.json  effect size 1_V_U_T.json  effect size 5_V_U_T.json  effect size 5_W_V_U_T.json
results/causal_insufficiency/: four_nodes_U1_U2_U3_U4.json  three_nodes_U1_U2_U3.json
results/faithfulness_violation/: five_nodes_no_hidden_vars.json  four_nodes_no_hidden_vars.json  six_nodes_no_hidden_vars.json  three_nodes_no_hidden_vars.json
results/five_node_model/: effect_size_0.2_no_hidden_vars.json  effect_size_0.5_no_hidden_vars.json  effect_size_10_no_hidden_vars.json  effect_size_1_no_hidden_vars.json  effect_size_5_no_hidden_vars.json
results/mediated_path/: effect_size_0.2_T.json  effect_size_0.2_U_T.json  effect_size_0.2_V_U_T.json  effect_size_0.2_W_V_U_T.json  effect_size_0.2_no_hidden_vars.json  effect_size_0.5_T.json  effect_size_0.5_U_T.json  effect_size_0.5_V_U_T.json  effect_size_0.5_W_V_U_T.json  effect_size_0.5_no_hidden_vars.json  effect_size_1_T.json  (+14 more)
scores_for_real_world_data/: real_world_examples.py
tests/: test_compute_rates.py  test_compute_scores.py  test_utils.py  test_utils_counting.py
(+3 files in other folders)
