[tool.poetry]
name = "coherency-scores"
version = "0.1.0"
description = ""
authors = ["Sofia Faltenbacher"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
causy = "^0.1.37"
matplotlib = "^3.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
